results/SVCOMP/conversational/log-StringConcatenation01-2024_03_16_15_10_58.txt
public class StringConcatenation01 {
  //@ requires arg1 != null && arg2 != null;
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
  public static boolean f(String arg1, String arg2) {
    String[] args = new String[2];
    args[0] = arg1;
    args[1] = arg2;

    String s1 = args[0];
    String s2 = args[1];

    if (!(s1.equals(args[0]))) return false;
    if (!(s2.equals(args[1]))) return false;

    String tmp = s1.concat(s2);
    if (!(tmp.equals(args[0] + args[1]))) return false;

    tmp = s1;
    if (!(tmp.equals(args[0])))
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringConcatenation01.java:3: error: cannot find symbol
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
                                       ^
  symbol:   variable args
  location: class StringConcatenation01
/home/max/Documents/JMLGPT/tmp/StringConcatenation01.java:3: error: cannot find symbol
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
                                                               ^
  symbol:   variable args
  location: class StringConcatenation01
/home/max/Documents/JMLGPT/tmp/StringConcatenation01.java:3: error: cannot find symbol
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
                                                                                                    ^
  symbol:   variable args
  location: class StringConcatenation01
/home/max/Documents/JMLGPT/tmp/StringConcatenation01.java:3: error: cannot find symbol
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
                                                                                                              ^
  symbol:   variable args
  location: class StringConcatenation01
/home/max/Documents/JMLGPT/tmp/StringConcatenation01.java:3: error: cannot find symbol
  //@ ensures \result <==> arg1.equals(args[0]) && arg2.equals(args[1]) && arg1.concat(arg2).equals(args[0] + args[1]) && arg1.equals(args[0]);
                                                                                                                                      ^
  symbol:   variable args
  location: class StringConcatenation01
5 errors

public class StringConcatenation01 {
  //@ requires arg1 != null && arg2 != null;
  //@ ensures \result <==> arg1.equals(arg1) && arg2.equals(arg2) && arg1.concat(arg2).equals(arg1 + arg2) && arg1.equals(arg1);
  public static boolean f(String arg1, String arg2) {
    String[] args = new String[2];
    args[0] = arg1;
    args[1] = arg2;

    String s1 = args[0];
    String s2 = args[1];

    if (!(s1.equals(args[0]))) return false;
    if (!(s2.equals(args[1]))) return false;

    String tmp = s1.concat(s2);
    if (!(tmp.equals(args[0] + args[1]))) return false;

    tmp = s1;
    if (!(tmp.equals(args[0])))
      return false;
    return true;
  }
}
